# data_ai

./: .env  .gitignore  README.md  compose.yaml  main.py  post_example.json  profile_output  profile_run.py  pyproject.toml
game_api/: dockerfile  pyproject.toml
game_api/src/: main.py  program.py  test.json
game_api/src/models/: field.py  game_state.py
game_api/src/models/enums/: actions.py
game_api/src/services/: game_service.py  logger.py
model_joris/: dockerfile  pyproject.toml
model_joris/src/: main.py  program.py
model_joris/src/models/: field.py  game_state.py
model_joris/src/models/enums/: actions.py
model_joris/src/services/: logger.py  model.py
model_wesley/: pyproject.toml
model_wesley/src/: program.py
model_wesley/src/test/: test.py
src/pannenkoek/: main.py
src/scrum_game/: api.py  main.py
src/scrum_game/ai_models/: ai_base_model.py  model_joris.py  model_policy.py  model_random.py  model_rl_value.py  model_value.py
src/scrum_game/ai_models/utils/: experience_replay.py
src/scrum_game/controllers/: state_controller.py
src/scrum_game/models/: data.py  dqn.py  field.py  game_state.py  player.py  position.py
src/scrum_game/models/dto/: action_response_dto.py  game_state_dto.py
src/scrum_game/models/enums/: action.py  dice.py
src/scrum_game/services/: game_service.py  state_service.py
src/scrum_game/utils/: logger.py  plotting.py  printer.py
